<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="name">HvsI</string>
	<string name="language">Language</string>

	<string-array name="tabs">
		<item>Info</item>
		<item>Blog</item>
		<item>Tag</item>
		<item>Profile</item>
		<item>Station</item>
		<item>Admin</item>
	</string-array>

	<string-array name="languages">
		<item>English</item>
		<item>Français</item>
	</string-array>
	<string name="settings">Settings</string>
	<string name="fields_username">Username</string>
	<string name="fields_cell">Cell Number (optional)</string>
	<string name="fields_name">Name</string>
	<string name="fields_language">Language</string>
	<string name="fields_student_number">Student Number</string>
	<string name="fields_twitter">Twitter Handle (optional)</string>
	<string name="fields_password">Password</string>
	<string name="fields_email">Email address</string>
	<string name="fields_password_confirm">Password (confirm)</string>
	<string name="pages_forgot_password_fail">No account with the specified username.  Check spelling and try again.</string>
	<string name="pages_forgot_password_ok">An email was sent to the address associated with the specified username.  Follow the instructions within to reset your password.</string>
	<string name="pages_forgot_password_title">Recover lost password</string>
	<string name="pages_login_inprogress">Logging in&#8230;</string>
	<string name="pages_login_error_failed">Incorrect username or password</string>
	<string name="pages_login_error_field_req">Field Required</string>
	<string name="pages_login_title">Login</string>
	<string name="pages_login_opposite">Logout</string>
	<string name="pages_register_inprogress">Registering&#8230;</string>
	<string name="pages_register_complete_msg">Visit an HvsI station starting %1$s at %2$s to pick up your kit.</string>
	<string name="pages_register_complete">Registration Complete</string>
	<string name="pages_register_title">Register</string>
	<string name="pages_register_eula_safety_title">Safety Responsibilities</string>
	<string name="pages_register_eula_liability_title">Liability Waiver</string>
	<string name="pages_register_eula_agree">Agree</string>
	<string name="pages_register_eula_disagree">Cancel Registration</string>
	<string name="pages_register_eula_cancelled">Registration Cancelled</string>
	<string name="pages_register_errors_dup">A user already exists with some or all of this identifying information.</string>
	<string name="pages_register_errors_invalid_email">This email address is invalid</string>
	<string name="pages_register_errors_bad">Registration Failed</string>
	<string name="pages_register_errors_other">An internal error occured, please try again.</string>
	<string name="pages_register_errors_pass">Passwords do not match; check your spelling and try again.</string>
	<string name="pages_tag_human_go">Tag!</string>
	<string name="pages_tag_zombie_hint">Zombie Username</string>
	<string name="pages_tag_human_hint">Human Code</string>
	<string name="pages_tag_human_scan">Scan</string>
	<string name="pages_post_no_posts">No blog posts yet</string>
	<string name="pages_post_loading">Loading&#8230;</string>

</resources>
