<merge xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".RegisterActivity" >

	<!-- Login progress -->

	<LinearLayout
		android:id="@+id/register_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:visibility="gone" >

		<ProgressBar
			style="?android:attr/progressBarStyleLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp" />

		<TextView
			android:id="@+id/register_status_message"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:fontFamily="sans-serif-light"
			android:text="@string/pages_register_inprogress"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<!-- Login form -->

	<ScrollView
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<LinearLayout
			style="@style/LoginFormContainer"
			android:orientation="vertical" >

			<EditText
				android:id="@+id/name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/fields_name"
				android:inputType="textNoSuggestions"
				android:maxLines="1"
				android:singleLine="true" />

			<EditText
				android:id="@+id/username"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/fields_username"
				android:inputType="textNoSuggestions"
				android:maxLines="1"
				android:singleLine="true" />

			<EditText
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/fields_email"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				android:singleLine="true" />

			<EditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/fields_password"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true" />

			<EditText
				android:id="@+id/password_confirm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/fields_password_confirm"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true" />
			
			<EditText
				android:id="@+id/student_number"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/fields_student_number"
				android:inputType="number"
				android:maxLines="1"
				android:singleLine="true" />
			
			<EditText
				android:id="@+id/twitter"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/fields_twitter"
				android:inputType="textNoSuggestions"
				android:maxLines="1"
				android:singleLine="true" />
			
			<EditText
				android:id="@+id/cell"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/fields_cell"
				android:inputType="phone"
				android:maxLines="1"
				android:singleLine="true" />

			<Spinner
				android:id="@+id/language"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" 
				android:prompt="@string/fields_language" 
				android:entries="@array/languages"/>

			<Button
				android:id="@+id/sign_in_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:layout_marginTop="16dp"
				android:paddingLeft="32dp"
				android:paddingRight="32dp"
				android:text="@string/pages_register_title" />
		</LinearLayout>

	</ScrollView>

</merge>
